feat: login and registration views, with user persistence and route protections

--- a/backend/requirements/requirements.txt
+++ b/backend/requirements/requirements.txt
@@ -3,3 +3,4 @@ django-environ==0.9.0
 psycopg2==2.9.5
 djangorestframework==3.14.0
 drf-spectacular==0.25.1  # https://github.com/tfranzel/drf-spectacular
+django-cors-headers==3.14.0
