--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,8 @@ services:
       - traefik.http.routers.awt_back.rule=Host(`localhost`) && (PathPrefix(`/api`) || PathPrefix(`/admin`) || PathPrefix(`/accounts`))
       - traefik.http.routers.awt_back.entrypoints=localweb
       - traefik.http.services.awt_back.loadbalancer.server.port=80
+    ports:
+      - 8001:80
 
   postgres:
     container_name: awt_postgres
