--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
+    "axios": "^1.4.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
-    "yup": "^1.0.2"
+    "yup": "^1.0.2",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
