--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.9.0",
     "yup": "^1.0.2",
     "zustand": "^4.3.8"
