--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.9.0",
